[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/art/objects/winged_platform.png" type="Texture" id=1]
[ext_resource path="res://src/Objects/Platform.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "idle"
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24, 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 23, 1 )

[node name="Platform" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
hframes = 4
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 1 )

[node name="StaticBody2D" type="KinematicBody2D" parent="."]
position = Vector2( 40, 10 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 2 )
one_way_collision = true

[node name="Node2D" type="Node2D" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="Area" type="Area2D" parent="."]
position = Vector2( 40, 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area"]
shape = SubResource( 3 )
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
